# transfer-learning-publication

./: .coverage  .gitignore  CLAUDE.md  README.md  hello.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
configs/: datamodule_example.yaml  example_gauge_ids.txt  first_run.yaml  test_reproducibility.yaml
configs/models/: ealstm_example.yaml  tide_example.yaml
docs/: checkpoint_utils_api.md  composite_pipeline_guide.md  model_evaluator_guide.md  model_factory.md  model_implementation_guidelines.md
examples/: model_factory_example.py
experiments/: baseline_experiment.yaml  multi_model_experiment.yaml  test_experiment.yaml  test_reproducibility_experiment.yaml
notebooks/: data_to_trained_workflow_test.ipynb  first_try.ipynb  try_data_cleaners.ipynb  try_datamodule.ipynb  try_dataset.ipynb  try_model_factory.ipynb
scripts/: caravan_to_hive.py  clean_caravan.py  copy_attributes_to_splits.py  merge_attribute_types.py
src/transfer_learning_publication/callbacks/: __init__.py  huggingface.py  progress.py
src/transfer_learning_publication/checkpoint_utils/: __init__.py  checkpoint.py  discovery.py
src/transfer_learning_publication/cleaners/: __init__.py  clip.py  cyclical_date_encoding.py  fill_na.py  gauge_cleaner.py  temporal_consistency.py  train_val_test.py  trim_to_col.py
src/transfer_learning_publication/containers/: __init__.py  dataset_config.py  lsh_data_container.py  sequence_index.py  static_attribute.py  time_series.py
src/transfer_learning_publication/contracts/: __init__.py  batch.py  collate.py  evaluation_results.py  forecast_output.py  sample.py
src/transfer_learning_publication/data/: __init__.py  caravanify_parquet.py  lsh_datamodule.py  lsh_dataset.py  timeseries_datamodule.py
src/transfer_learning_publication/finetuning_cli/: __init__.py  __main__.py  finetune_orchestrator.py
src/transfer_learning_publication/models/: __init__.py  model_evaluator.py  model_factory.py
src/transfer_learning_publication/models/base/: __init__.py  base_config.py  base_lit_model.py  (+1 more)
src/transfer_learning_publication/training_cli/: README.md  __init__.py  __main__.py  orchestrator.py  trainer_factory.py
src/transfer_learning_publication/transforms/: __init__.py  base.py  builder.py  composite.py  log_scale.py  pipeline.py  z_score.py
tests/: test_base_config.py  test_base_lit_model.py  test_base_transform.py  test_batch.py  test_builder.py  test_caravanify_parquet.py  test_checkpoint_discovery.py  test_clip.py  test_collate.py  test_composite.py  test_cyclical_date_encoding.py  test_dataset_config.py  test_fill_na.py  test_finetune_orchestrator.py  test_finetuning_cli_main.py  test_forecast_output.py  test_gauge_cleaner.py  test_log_scale.py  test_lsh_data_container.py  test_lsh_datamodule.py  test_lsh_dataset.py  test_model_integration.py  test_orchestrator.py  test_pipeline.py  test_progress.py  test_reproducibility.py  test_rev_in.py  test_sample.py  test_sequence_index.py  test_static_attribute.py  test_temporal_consistency.py  test_time_series.py  test_timeseries_datamodule.py  test_train_val_test_split.py  test_trainer_factory.py  test_training_cli_main.py  test_trim_to_col.py  test_z_score.py
tests/contracts/: test_evaluation_results.py
tests/models/: test_model_evaluator.py  test_model_factory.py
tests/models/ealstm/: test_ealstm_config.py  test_ealstm_lightning.py  test_ealstm_model.py
tests/models/tft/: test_tft_config.py  test_tft_lightning.py  test_tft_model.py
tests/models/tide/: test_lightning.py  test_model.py  test_tide_config.py  test_tide_lightning.py  test_tide_model.py
tests/models/tsmixer/: test_tsmixer_config.py  test_tsmixer_lightning.py  test_tsmixer_model.py
(+22 files in other folders)
