[project]
name = "transfer-learning-publication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3", # tests
    "ruff>=0.12",  # linter + formatter
]

# -----------------------
# Ruff (lint + format)
# -----------------------
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["notebooks/", "experiments/"]

[tool.ruff.lint]
# Errors, warnings, naming, imports, modern py, bugbear, comprehensions, simplify
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", # let formatter handle wrapping
    "N803", # allow X, Y for ML-style params
    "N806", # allow X, Y for local vars
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------
# ty (fast static type checker)
# -----------------------
[tool.ty]
[tool.ty.rules]
possibly-unresolved-reference = "warn"

# -----------------------
# Pytest
# -----------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--ignore=notebooks/",
    "--ignore=experiments/",
]
