[project]
name = "transfer-learning-publication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "geopandas>=1.1.1",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.2",
    "lightning>=2.5.5",
    "lightning-sdk>=2025.9.4",
    "litmodels>=0.1.8",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "polars>=1.15.0",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
tl-train = "transfer_learning_publication.training_cli.__main__:main"
tl-finetune = "transfer_learning_publication.finetuning_cli.__main__:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3", # tests
    "pytest-cov>=6.2.1",
    "ruff>=0.12", # linter + formatter
]

# -----------------------
# Ruff (lint + format)
# -----------------------
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["notebooks/", "experiments/"]

[tool.ruff.lint]
# Errors, warnings, naming, imports, modern py, bugbear, comprehensions, simplify
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", # let formatter handle wrapping
    "N803", # allow X, Y for ML-style params
    "N806", # allow X, Y for local vars
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------
# ty (fast static type checker)
# -----------------------
[tool.ty]
[tool.ty.rules]
possibly-unresolved-reference = "warn"

# -----------------------
# Pytest
# -----------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--ignore=notebooks/",
    "--ignore=experiments/",
]
